Fixed table overflow

--- a/frontend/src/pages/Error/ErrorPage.module.scss
+++ b/frontend/src/pages/Error/ErrorPage.module.scss
@@ -145,6 +145,8 @@
 
 .errorLogCell {
     display: flex;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .errorLogOverflow {
